# lazy-cryctor

./: .gitignore  README.md  ff.py  pixi.toml  pyproject.toml
factor/: weigthed_windays.py  zh.py
research/: amm.ipynb  btc-zscore.ipynb  example.ipynb  features.ipynb  hftrend.ipynb  mark.ipynb  mark_4.ipynb  pair-arb.ipynb  pmm.ipynb  research-note.md  seasonality.ipynb  wujie.ipynb  zh.py
scripts/: agg_1m.py  aggregate_1d_data.py  clean_data_1m.py  download-futures-klines-simultaneously.sh  download-klines.sh  fetch-all-trading-pairs.sh  futures-1m.sh  spot_clean_data_1m.py  symbols.txt  um_symbols.txt
