[project]
name = "lazy-cryctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "optuna>=4.5.0",
    "plotly>=6.3.1",
    "polars[plot]>=1.32.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
