[project]
name = "lazy-cryctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "optuna>=4.5.0",
    "polars[plot]>=1.32.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.5",
]
[tool.ty.environment]
root = ["./research"]
